# MOIRs-MARK-2-URDF

./: README.md
moir_mark2_urdf_ros/: CMakeLists.txt  package.xml
moir_mark2_urdf_ros/config/: module_config.yaml
moir_mark2_urdf_ros/meshes/: casings.STL  curved_link.STL  link_straight.STL  twist_unit.STL
moir_mark2_urdf_ros/rviz/: urdf.rviz
moir_mark2_urdf_ros/scripts/: ElementTree_pretty.py  moir_modular_composition_generator.py  moir_modular_generator_DH.py
moir_mark2_urdf_ros/urdf/: material.xacro  modular_robot.urdf.xacro
